--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@types/fabric": "^4.5.14",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "fabric": "^5.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
