--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
+    "inquirer": "^9.1.4",
     "sass": "^1.56.2",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
