--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@types/fabric": "^4.5.14",
+    "antd": "^5.0.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fabric": "^5.2.4",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
